# cleanix-cli

./: MANIFEST.in  README.md  cleanix.1  pyproject.toml
.github/workflows/: build.yml  ci.yml  release.yml
cleanix/: __init__.py  cli.py  config.py
cleanix/cleaners/: __init__.py  base.py  big_files.py  browser_profiles.py  bsd.py  containerd.py  containers.py  downloads.py  duplicates.py  macos.py  macos_extra.py  project_cruft.py  toolchains.py
cleanix/core/: history.py  report.py  safety.py
cleanix/scheduler/: __init__.py  cron.py  launchd.py  systemd.py
packaging/: README.md
packaging/aur/: PKGBUILD
packaging/homebrew/: cleanix.rb
packaging/rpm/: cleanix-cli.spec
scripts/: gen_manpage.py
tests/: test_cleanix.py
