[build-system]
requires = ["setuptools>=83.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cleanix-cli"
version = "1.2.0"
description = "A safe, thorough scheduled system cleaner for every *nix (Linux, macOS, BSD)."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "cleanix-cli contributors" }]
keywords = ["cleaner", "cleanup", "system", "maintenance", "linux", "macos", "bsd", "cache"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: POSIX :: BSD",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Systems Administration",
    "Topic :: Utilities",
]
dependencies = [
    "rich>=15.0.0",
    "PyYAML>=6.0.3",
]

[project.urls]
Homepage = "https://github.com/CloudOpsWorld/cleanix-cli"
Repository = "https://github.com/CloudOpsWorld/cleanix-cli"
Issues = "https://github.com/CloudOpsWorld/cleanix-cli/issues"

[project.optional-dependencies]
dev = ["pytest>=9.1.1", "ruff>=0.15.21", "mypy>=2.3.0", "build>=1.5.1"]

[project.scripts]
cleanix = "cleanix.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["cleanix*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
# Pragmatic default rule set; the CI lint job is advisory.
select = ["E", "F", "W", "I"]
ignore = ["E501", "E741"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
warn_unused_ignores = false
